<?xml version="1.0" encoding="UTF-8"?>
<!--
  uDig - User-friendly Desktop Internet GIS 

  http://udig.refractions.net
  (C) 2011 Refractions Research Inc.
  
  This library is free software; you can redistribute it and/or
  modify it under the terms of the GNU Lesser General Public
  License as published by the Free Software Foundation;
  version 2.1 of the License.
  
  This library is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  Lesser General Public License for more details.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.refractions</groupId>
    <artifactId>udig-tycho</artifactId>
    <version>1.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>
        This is the base uDig pom that controls the version numbers
        used by the nightly build process.
    </description>
    <prerequisites>
        <maven>3.0</maven>
    </prerequisites>

    <properties>
        <tycho-version>0.13.0</tycho-version>
        <tycho-provider>org.eclipse.tycho</tycho-provider>
    </properties>
    <!--
We need to ask you to download some libs prior to doing a full build:
   cd plugins/net.refractions.udig.libs
   mvn clean install -f pom-libs.xml
   cd ../..

Our maven tests require a bit more memory:
   export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"

Once that is done you can a normal build on the command line:
   mvn install -Dall

The product is available in features/net.refractions.udig-product/target

If you run into any problems (to list debug and stack trace)
   mvn -Dall -e -X install

Please note the Tycho maven plugin used to build RCP projects is a a work in progress; you
will do better to review the stack trace with a checkout of the Tycho code in hand as the
error messages are often misleading and evil.

To quickly build the product:
   mvn install -Pproduct

The build supports the use of profiles - to run a normal build with tests:
  mvn install -Dall -Ptest

The following profiles are defined:

Defines the appropriate p2 update repository
  mvn install -PudigProfile (on by default)

Gathers the tutorials and source code for the software developers kit
  mvn install -Dall -Psdk

Includes test plugins (this is optional):
  mvn install -Ptest

To profile the tests you will need:
  mvn install -Ptest -Pprofile

Gathers the plugins that are not included in the default product 
  mvn install -Ppending (included by -Dall)
  
Includes the udig and community sites:
   -Psite

Includes the ossim feaure (this may be dead code) 
  -Possim

    -->    
    <profiles>
        <profile>
            <id>udigProfile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <repositories>
                <repository>
                    <id>indigo-web</id>
                    <layout>p2</layout>
                    <url>http://download.eclipse.org/releases/indigo/</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>never</updatePolicy>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                        <updatePolicy>never</updatePolicy>
                    </snapshots>
                </repository>

                <repository>
                    <id>indigo-babel-web</id>
                    <layout>p2</layout>
                    <url>http://download.eclipse.org/technology/babel/update-site/R0.9.1/indigo</url>
                    <releases>
                        <enabled>true</enabled>
                        <updatePolicy>never</updatePolicy>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                        <updatePolicy>never</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
        </profile>

        <profile>
            <id>coverage</id>
            <activation>
                <property>
                    <name>coverage</name>
                </property>
            </activation>
            <properties>
                <emma.session.out.file>${project.build.directory}/emma/${project.artifactId}.es</emma.session.out.file>
                <emma.filter>se.mattiasholmqvist.*</emma.filter>
                <eclemma.instrument.bundles>se.mattiasholmqvist.tychoexamples.bundle</eclemma.instrument.bundles>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>attach-artifacts</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>attach-artifact</goal>
                                </goals>
                                <configuration>
                                    <artifacts>
                                        <artifact>
                                            <file>${emma.session.out.file}</file>
                                            <type>es</type>
                                        </artifact>
                                    </artifacts>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.tycho</groupId>
                        <artifactId>maven-osgi-test-plugin</artifactId>
                        <version>${tycho-version}</version>
                        <configuration>
                            <systemProperties combine.children="append">
                                <eclemma.help>true</eclemma.help>
                                <emma.session.out.file>${emma.session.out.file}</emma.session.out.file>
                                <emma.filter>${emma.filter}</emma.filter>
                                <eclemma.instrument.bundles>${eclemma.instrument.bundles}</eclemma.instrument.bundles>
                            </systemProperties>
                            <frameworkExtensions>
                                <frameworkExtension>
                                    <groupId>se.mattiasholmqvist.tychoexamples</groupId>
                                    <artifactId>eclemma.runtime.equinox</artifactId>
                                    <version>1.1.0.200908261008</version>
                                </frameworkExtension>
                            </frameworkExtensions>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>
    
    
    <build>
        <plugins>
            <plugin>
                <groupId>${tycho-provider}</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho-version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>${tycho-provider}</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <resolver>p2</resolver>
                    <!-- pomDependencies>consider</pomDependencies -->
                    <environments>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>carbon</ws>
                            <arch>x86</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>${tycho-provider}</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho-version}</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
               <executions>
                  <execution>
                     <id>the-execution-id</id>
                     <phase>none</phase>
                  </execution>
               </executions>			
            </plugin>
            <!-- 
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <version>${tycho-version}</version>
                <executions>
                  <execution>
                    <id>plugin-source</id>
                    <goals>
                      <goal>plugin-source</goal>
                    </goals>
                  </execution>
                </executions>
              </plugin>
              -->
        </plugins>
    </build>
    <reporting>
      <plugins>
        <!-- Code coverage report -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>cobertura-maven-plugin</artifactId>
          <!-- not a maven core plugin, specify version -->
          <version>2.2</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>findbugs-maven-plugin</artifactId>
          <!-- not a maven core plugin, specify version -->
          <version>2.1</version>
      </plugin>
    </plugins>
    </reporting>
    <modules>
        <module>plugins</module>
        <module>features</module>
    </modules>
</project>
